# tetris

./: LICENSE  Makefile  README.md  stack.yaml  tetris.cabal
app/: Main.hs
src/: Tetris.hs
src/Tetris/: Board.hs  Chunks.hs  Controller.hs  Game.hs  View.hs
src/Tetris/Model/: Board.hs  Game.hs
test/: Spec.hs
