name:                tetris
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/tetris#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tetris, Tetris.Board, Tetris.Game, Tetris.Controller, Tetris.View
  build-depends:       base >= 4.7 && < 5
                     , stm
  default-language:    Haskell2010

executable tetris-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tetris
                     , stm
  default-language:    Haskell2010

test-suite tetris-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  other-modules:       Tetris.Board
  main-is:             Spec.hs
  build-depends:       base
                     , tetris
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tetris
