name:                tetris
version:             0.1.0.0
synopsis:            TTY-based tetris clone
description:         Please see README.md
homepage:            http://github.com/pzel/tetris#readme
license:             BSD3
license-file:        LICENSE
author:              Simon Zelazny
maintainer:          zelazny@mailbox.org
copyright:           2015 Simon Zelazny
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Tetris
                     , Tetris.Model.Board, Tetris.Model.Game
                     , Tetris.Controller, Tetris.View, Tetris.Chunks
  build-depends:       base
                     , stm
  default-extensions:  RecordWildCards
  default-language:    Haskell2010

executable tetris-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tetris
                     , stm
  default-language:    Haskell2010

test-suite tetris-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  other-modules:       Tetris
                     , Tetris.Model.Board, Tetris.Model.Game
                     , Tetris.Controller, Tetris.View, Tetris.Chunks
  main-is:             Spec.hs
  build-depends:       base
                     , tetris
                     , stm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  RecordWildCards
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tetris
